crates/swc_ecma_parser/tests/errors/arguments/input.js
class A {
    static {
      	class B {
            [arguments]
        }
    }

    foo = arguments
}